--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
     "prisma:seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
+    "seed": "ts-node prisma/seed.ts",
     "prisma:reset": "prisma migrate reset && npm run prisma:seed"
   },
   "dependencies": {
